--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple, clean, Promise-based Mutex library and class",
   "main": "src/es6mutex.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/debonet/es6mutex/issues"
   },
-  "homepage": "https://github.com/debonet/es6mutex#readme"
+  "homepage": "https://github.com/debonet/es6mutex#readme",
+  "devDependencies": {
+    "jest": "^26.6.3"
+	}
 }
